Fix vercel.json: remove builds property to fix conflict with functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,19 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "api/*.py",
-      "use": "@vercel/python"
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
     },
     {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
+      "source": "/(.*)",
+      "destination": "/public/$1"
     }
   ],
   "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    },
     "api/process.py": {
       "maxDuration": 60
     }
